Fixes spacing bw summary items.

--- a/cosinnus/html_emails/src/assets/scss/app.scss
+++ b/cosinnus/html_emails/src/assets/scss/app.scss
@@ -31,3 +31,9 @@ img {
         background-color: transparent;
     }
 }
+
+.columns {
+    &.tight {
+        padding-bottom: 0;
+    }
+}
